# cmm-lang-asm

./: CMakeLists.txt  README.md
Frontend/: frontend.h  parsing.cpp
Usage example/: compile.bat  file_listing.txt  program.cmm  program.ncpu  program.tree  program.vasm  program_optm.tree  results.txt
backend/: backend.cpp  backend.h  backend_config.h
example/: file_listing.txt  program.ll  program.vasm  results.txt
frontend/: parsing.cpp  tree_recording.cpp
frontend_reversed/: frontend_rev.cpp  frontend_rev_config.h  tree_reading.cpp
llvm_gen/: llvm_gen.cpp  llvm_gen.h  llvm_gen_config.h  main.cpp  tree_reading.cpp
optimizer/: tree_reading.cpp
tree/: tree.cpp  tree_config.h
